; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/oleaut32/extr_typelib.c_decode_string.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/oleaut32/extr_typelib.c_decode_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }
%struct.bitstream = type { i32, i64, i32* }

@decode_string.spaceW = internal constant [2 x i8] c" \00", align 1
@CP_ACP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i8*, i32, %struct.TYPE_3__*)* @decode_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @decode_string(i32* %0, i8* %1, i32 %2, %struct.TYPE_3__* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_3__*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca %struct.bitstream, align 8
  %14 = alloca i64*, align 8
  %15 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store %struct.TYPE_3__* %3, %struct.TYPE_3__** %9, align 8
  %16 = load i32, i32* %8, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %19, label %18

18:                                               ; preds = %4
  store i32* null, i32** %5, align 8
  br label %72

19:                                               ; preds = %4
  %20 = load i8*, i8** %7, align 8
  %21 = bitcast i8* %20 to i32*
  %22 = getelementptr inbounds %struct.bitstream, %struct.bitstream* %13, i32 0, i32 2
  store i32* %21, i32** %22, align 8
  %23 = load i32, i32* %8, align 4
  %24 = getelementptr inbounds %struct.bitstream, %struct.bitstream* %13, i32 0, i32 0
  store i32 %23, i32* %24, align 8
  %25 = getelementptr inbounds %struct.bitstream, %struct.bitstream* %13, i32 0, i32 1
  store i64 0, i64* %25, align 8
  %26 = load i32*, i32** %6, align 8
  %27 = load i32, i32* %26, align 4
  store i32 %27, i32* %10, align 4
  %28 = load i32*, i32** %6, align 8
  %29 = getelementptr inbounds i32, i32* %28, i64 4
  store i32* %29, i32** %6, align 8
  %30 = load i32*, i32** %6, align 8
  %31 = load i32, i32* %30, align 4
  store i32 %31, i32* %11, align 4
  %32 = load i32*, i32** %6, align 8
  %33 = getelementptr inbounds i32, i32* %32, i64 4
  store i32* %33, i32** %6, align 8
  %34 = load i32, i32* %10, align 4
  %35 = call i64* @SysAllocStringLen(i32* null, i32 %34)
  store i64* %35, i64** %14, align 8
  %36 = load i64*, i64** %14, align 8
  %37 = getelementptr inbounds i64, i64* %36, i64 0
  store i64 0, i64* %37, align 8
  br label %38

38:                                               ; preds = %51, %19
  %39 = load i32*, i32** %6, align 8
  %40 = load i32, i32* %11, align 4
  %41 = call i8* @lookup_code(i32* %39, i32 %40, %struct.bitstream* %13)
  store i8* %41, i8** %12, align 8
  %42 = icmp ne i8* %41, null
  br i1 %42, label %43, label %64

43:                                               ; preds = %38
  %44 = load i64*, i64** %14, align 8
  %45 = getelementptr inbounds i64, i64* %44, i64 0
  %46 = load i64, i64* %45, align 8
  %47 = icmp ne i64 %46, 0
  br i1 %47, label %48, label %51

48:                                               ; preds = %43
  %49 = load i64*, i64** %14, align 8
  %50 = call i32 @strcatW(i64* %49, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @decode_string.spaceW, i64 0, i64 0))
  br label %51

51:                                               ; preds = %48, %43
  %52 = load i32, i32* @CP_ACP, align 4
  %53 = load i8*, i8** %12, align 8
  %54 = load i64*, i64** %14, align 8
  %55 = load i64*, i64** %14, align 8
  %56 = call i32 @strlenW(i64* %55)
  %57 = sext i32 %56 to i64
  %58 = getelementptr inbounds i64, i64* %54, i64 %57
  %59 = load i32, i32* %10, align 4
  %60 = load i64*, i64** %14, align 8
  %61 = call i32 @strlenW(i64* %60)
  %62 = sub nsw i32 %59, %61
  %63 = call i32 @MultiByteToWideChar(i32 %52, i32 0, i8* %53, i32 -1, i64* %58, i32 %62)
  br label %38

64:                                               ; preds = %38
  %65 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %66 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %65, i32 0, i32 0
  %67 = load i64*, i64** %14, align 8
  %68 = call i32* @TLB_append_str(i32* %66, i64* %67)
  store i32* %68, i32** %15, align 8
  %69 = load i64*, i64** %14, align 8
  %70 = call i32 @SysFreeString(i64* %69)
  %71 = load i32*, i32** %15, align 8
  store i32* %71, i32** %5, align 8
  br label %72

72:                                               ; preds = %64, %18
  %73 = load i32*, i32** %5, align 8
  ret i32* %73
}

declare dso_local i64* @SysAllocStringLen(i32*, i32) #1

declare dso_local i8* @lookup_code(i32*, i32, %struct.bitstream*) #1

declare dso_local i32 @strcatW(i64*, i8*) #1

declare dso_local i32 @MultiByteToWideChar(i32, i32, i8*, i32, i64*, i32) #1

declare dso_local i32 @strlenW(i64*) #1

declare dso_local i32* @TLB_append_str(i32*, i64*) #1

declare dso_local i32 @SysFreeString(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
